--- a/info6.html
+++ b/info6.html
@@ -23,18 +23,23 @@
     <h3>Neymar Jr. é conhecido por ser um dos jogadores de futebol mais talentosos e reconhecidos internacionalmente. Sua atuação no futebol internacional tem sido marcada por diversos momentos de destaque. </h3></div>
     <div>
         <img src="https://p2.trrsf.com/image/fget/cf/1200/1200/middle/images.terra.com/2023/02/08/1822904370-neymar-psg-2017.jpg" alt="">
-        <p>Neymar transferiu-se para o Paris Saint-Germain em agosto de 2017, em uma transferência recorde. No PSG, ele tornou-se uma peça fundamental no ataque da equipe, formando uma parceria notável com outros jogadores de classe mundial, como Kylian Mbappé e Lionel Messi (a partir de 2021). <br>Neymar ajudou o PSG a chegar à final da Liga dos Campeões da UEFA na temporada 2019-2020, mas a equipe foi derrotada pelo Bayern de Munique. Ele continua a ser uma figura importante nas campanhas europeias do PSG.</p>
+        <div class="text">
+          <p>Neymar transferiu-se para o Paris Saint-Germain em agosto de 2017, em uma transferência recorde. No PSG, ele tornou-se uma peça fundamental no ataque da equipe, formando uma parceria notável com outros jogadores de classe mundial, como Kylian Mbappé e Lionel Messi (a partir de 2021). <br>Neymar ajudou o PSG a chegar à final da Liga dos Campeões da UEFA na temporada 2019-2020, mas a equipe foi derrotada pelo Bayern de Munique. Ele continua a ser uma figura importante nas campanhas europeias do PSG.</p>
+        </div>
     </div>
 
     <div>
-        <div class="text"><p> Em 2013, Neymar transferiu-se para o FC Barcelona, onde fez parte do trio MSN, juntamente com Lionel Messi e Luis Suárez. Durante seu tempo no Barcelona, a equipe conquistou vários títulos, incluindo a Liga dos Campeões da UEFA, La Liga e a Copa do Rei. </p></div>
+        <div class="text">
+          <p> Em 2013, Neymar transferiu-se para o FC Barcelona, onde fez parte do trio MSN, juntamente com Lionel Messi e Luis Suárez. Durante seu tempo no Barcelona, a equipe conquistou vários títulos, incluindo a Liga dos Campeões da UEFA, La Liga e a Copa do Rei. </p>
+        </div>
         <img src="https://cdn.espn.com.br/image/wide/622_968a3415-ddf4-3ce0-9da7-2141c1fdd78c.jpg" alt="">
     </div>
   
     <div>
         <img src="https://static1.purepeople.com.br/articles/5/38/44/95/@/4416860-neymar-foi-operado-em-um-hospital-de-bel-580x0-2.jpg" alt="">
-        <div class="text"><p>Como uma personalidade internacionalmente reconhecida, Neymar é um ícone de marketing. Ele tem parcerias com várias marcas globais e é frequentemente envolvido em campanhas publicitárias. </p>
-         <p> Além de suas realizações no futebol, Neymar também se envolve em eventos de caridade e questões sociais, contribuindo para sua imagem positiva em escala global. 
+        <div class="text">
+          <p>Como uma personalidade internacionalmente reconhecida, Neymar é um ícone de marketing. Ele tem parcerias com várias marcas globais e é frequentemente envolvido em campanhas publicitárias. </p>
+          <p> Além de suas realizações no futebol, Neymar também se envolve em eventos de caridade e questões sociais, contribuindo para sua imagem positiva em escala global. 
           Sua popularidade transcende fronteiras, tornando-o uma figura cultural global. Neymar é frequentemente destaque em programas de televisão, entrevistas e eventos esportivos internacionais.</p></div>
     </div>
     
