--- a/.github/workflows/inicial.html
+++ b/.github/workflows/inicial.html
@@ -6,33 +6,57 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="icone.jpg">
 </head>
-<body>
+<body style="background-color: #B20606;">
   <header style="background-color: black;">
-    <h1>FanaticsEsports</h1>
+    <h1 style="color: #B20606;">FanaticsSports</h1>
     <h2>Tudo sobre o seu time</h2>
   </header>
   <div class="div_burger">
     <img class="img_burger" src="cardapio.png" alt="abrir-menu">
-</div>
+  </div>
     
   <div class='login_page'>
     <div class="sobre">
-        <div class="sobre_info">
-            <h6>
-                Garanta sua esperiência e acompanhe seu time do coraçãode perto com as melhores fontes e notícias quentinhas para ficar ligado no mundo do futbol.
-            </h6>
-        </div>
+      <div class="sobre_info">
+        <h6> Garanta sua experiência e acompanhe seu time de perto com as melhores fontes e notícias quentinhas para ficar ligado no mundo do futebol. </h6>
+      </div>
     </div>
     <div class="login">
       <h6>Já tem conta?</h6>
       <a href="login.html"><button>LOGIN</button></a>
       <h6>Não tem conta ainda?</h6>
       <a href="cadastro.html"><button>CADASTRE-SE</button></a>
+    </div>
   </div>
-  </div>
-  <div class="sobrenos"></div>
-  <footer style="background-color: white;">
-    <p style="color:black;">@Denis@Eunice@Gabriely@Monicke@Wesley</p>
+<section class="sobrenos">
+    <div class="criador ">
+      <img src="denis.jpeg">
+      <p><strong>Denis Nalderson</strong><br>Designer e Pesquisador</p>
+    </div>
+
+    <div class="criador ">
+      <img src="eunice.jpeg">
+      <p><strong>Eunice Cristina</strong><br>Front-end e Back-end</p>
+    </div>
+
+    <div class="criador">
+      <img src="gabriely.jpeg">
+      <p><strong>Gabriely Andrade</strong><br>Front-end</p>
+    </div>
+
+    <div class="criador ">
+      <img src="monicke.jpeg">
+      <p><strong>Monicke Lopes</strong><br>Front-end e Back-end</p>
+    </div>
+
+    <div class="criador">
+      <img src="wesley.jpeg">
+      <p><strong>Wesley Darlly</strong><br>Designer e Pesquisador </p>
+    </div>
+  </section>
+
+  <footer style="background-color: black;">
+    <p style="color: white;">© 2023 FanaticsEsports. Todos os direitos reservados.</p>
   </footer>
   <div class="barra_lateral">
     <button class="buttonFecharMenu">
@@ -41,7 +65,7 @@
     <a href="inicial.html"><button>Página Inicial</button></a>
     <a href="dashboard.html"><button>Dashboard</button></a>
     <a href="login.html"><button>Entrar com uma conta</button></a>
-    <a href="cadastro.html"><button>Cadastrar conta</button>  </a>
+    <a href="cadastro.html"><button>Cadastrar conta</button></a>
     <a href=""><button>Times</button></a> 
   </div>
   <script src="script.js"></script>
