--- a/.github/workflows/dashboard.html
+++ b/.github/workflows/dashboard.html
@@ -105,7 +105,7 @@
     </div>
   </main>
   <footer>
-    <p>@Denis@Eunice@Gabriely@Monicke@Wesley</p>
+    <p>>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
   </footer>
   <div class="barra_lateral">
     <button class="buttonFecharMenu">
