--- a/info3.html
+++ b/info3.html
@@ -91,7 +91,7 @@
         <a href=""><button>Times</button></a>
     </div>
     <footer>
-        <p>@Denis@Eunice@Gabriely@Monicke@Wesley</p>
+        <p>>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
