--- a/info4.html
+++ b/info4.html
@@ -54,7 +54,7 @@
     <a href=""><button>Times</button></a> 
   </div>
   <footer>
-    <p>@Denis@Eunice@Gabriely@Monicke@Wesley</p>
+    <p>>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
   </footer>
   <div class="barra_lateral">
     <button class="buttonFecharMenu">
