--- a/info6.html
+++ b/info6.html
@@ -57,7 +57,7 @@
     <a href=""><button>Times</button></a> 
   </div>
   <footer>
-    <p>>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
+    <p>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
