--- a/.github/workflows/cadastro.html
+++ b/.github/workflows/cadastro.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <footer>
-    <p>>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
+    <p>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
   </footer>
   <div class="barra_lateral">
     <button class="buttonFecharMenu">
