--- a/.github/workflows/login.html
+++ b/.github/workflows/login.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <footer>
-    <p style="color: black;">© 2023 FanaticsEsports. Todos os direitos reservados.</p>
+    <p>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
   </footer>
   <div class="barra_lateral">
     <button class="buttonFecharMenu">
