--- a/flamengo.html
+++ b/flamengo.html
@@ -82,7 +82,9 @@
        <div class="jogadoresTimes"><p><b>Gabigol :</b> Atacante que teve um papel fundamental na conquista da Copa Libertadores e do Campeonato Brasileiro em 2019, marcando gols importantes.</p><img src="https://imguol.com/c/esporte/e5/2023/12/22/gabigol-atacante-do-flamengo-no-jogo-contra-o-vasco-pelo-brasileirao-1703263901385_v2_450x450.jpg" alt=""></div>
        <div class="jogadoresTimes"><p><b>Arrascaeta : </b>Meia uruguaio que se destacou com sua habilidade e visão de jogo, contribuindo para importantes conquistas recentes do Flamengo.</p>
     <img src="https://imguol.com/c/esporte/47/2023/10/23/arrascaeta-durante-jogo-do-flamengo-contra-o-vasco-pelo-campeonato-brasileiro-1698091260611_v2_450x450.jpg" alt=""></div>
-    
+    <footer style="background-color: red">
+        <p>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
+    </footer>
    
 </body>
 </html>
