--- a/corinthians.html
+++ b/corinthians.html
@@ -117,7 +117,9 @@
         <p><b> Gamarra : </b> O zagueiro paraguaio Gamarra teve uma passagem marcante pelo Corinthians, sendo reconhecido pela sua solidez defensiva.</p>
         <img src="https://cdn.meutimao.com.br/_upload/jogador/carlos-alberto-gamarra-pavon-no-corinthians_7_corinthians.jpg" alt="">
        </div>
-       
+    <footer style="background-color: black">
+        <p>© 2023 FanaticsEsports. Todos os direitos reservados.</p>
+    </footer>
 
    
 </body>
