--- a/.github/workflows/login.html
+++ b/.github/workflows/login.html
@@ -32,7 +32,7 @@
         </div>
 
         <div>
-          <button id="loginButton" onclick="validarFormulario()">LOGIN</button>
+          <button id="loginButton" onclick="validarFormularioENavegar()">LOGIN</button>
         </div>
     </div>
   </div>
