--- a/.github/workflows/dashboard.html
+++ b/.github/workflows/dashboard.html
@@ -32,24 +32,24 @@
 
     <div class="times">
       <div class="carousel">
-        <img src="spfc.jpg" alt="São Paulo">
-        <img src="cori.jpg" alt="Corinthians">
-        <img src="flamengo.jpg" alt="Flamengo">
-        <img src="palmeiras.jpg" alt="Palmeiras">
-        <img src="botafogo.png" alt="Botafogo">
-        <img src="vasco.png" alt="Vasco">
-        <img src="gremio.jpg" alt="Grêmio">
-        <img src="santos.png" alt="Santos">
-        <img src="atleticomg.jpg" alt="Atlético Mineiro">
-        <img src="fluminense.png" alt="Fluminense">
-        <img src="barce.png" alt="Barcelona">
-        <img src="psg.jpg" alt="Paris Saint-Germain">
-        <img src="juventus.jpg" alt="Juventus">
-        <img src="real.png" alt="Real Madrid">
-        <img src="manchester.png" alt="Manchester United">
-        <img src="river.png" alt="River Plate">
-        <img src="liverpool.png" alt="Liverpool">
-        <img src="bayern.png" alt="Bayern de Munique">
+        <img src="spfc.jpg" onclick="navegarPara('sãopaulo.html')" alt="São Paulo">
+        <img src="cori.jpg" onclick="navegarPara('corinthians.html')" alt="Corinthians">
+        <img src="flamengo.jpg" onclick="navegarPara('flamengo.html')" alt="Flamengo">
+        <img src="palmeiras.jpg" onclick="navegarPara('palmeiras.html')" alt="Palmeiras">
+        <img src="botafogo.png"  onclick="navegarPara('botafogo.html')" alt="Botafogo">
+        <img src="vasco.png" onclick="navegarPara('vasco.html')" alt="Vasco">
+        <img src="gremio.jpg" onclick="navegarPara('gremio.html')" alt="Grêmio">
+        <img src="santos.png" onclick="navegarPara('santos.html')" alt="Santos">
+        <img src="atleticomg.jpg" onclick="navegarPara('atletico.html')" alt="Atlético Mineiro">
+        <img src="fluminense.png" onclick="navegarPara('fluminense.html')" alt="Fluminense">
+        <img src="barce.png" onclick="navegarPara('barcelona.html')" alt="Barcelona">
+        <img src="psg.jpg" onclick="navegarPara('psg.html')" alt="Paris Saint-Germain">
+        <img src="juventus.jpg" onclick="navegarPara('juventus.html')" alt="Juventus">
+        <img src="real.png" onclick="navegarPara('realmadrid.html')" alt="Real Madrid">
+        <img src="manchester.png"onclick="navegarPara('manchester.html')" alt="Manchester United">
+        <img src="river.png" onclick="navegarPara('river-plate.html')" alt="River Plate">
+        <img src="liverpool.png" onclick="navegarPara('liverpool.html')" alt="Liverpool">
+        <img src="bayern.png" onclick="navegarPara('bayern-de-munique.html')" alt="Bayern de Munique">
       </div>
       <button class="arrow prev">&lt;</button>
       <button class="arrow next">&gt;</button>
