--- a/manchester.html
+++ b/manchester.html
@@ -21,7 +21,7 @@
         <h4>
             O Manchester United é uma verdadeira lenda no mundo do futebol, uma equipe com uma história gloriosa e uma legião de fãs apaixonados em todo o mundo. </h4>
         <div class="fotosTimes">
-            <img class="hide-on-mobile" src="https://th.bing.com/th/id/OIP.nFiqiCiUq2NSJtWAVFPRYAHaEK?w=287&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
+            <img  src="https://th.bing.com/th/id/OIP.nFiqiCiUq2NSJtWAVFPRYAHaEK?w=287&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
             <img class="hide-on-mobile"src="https://th.bing.com/th/id/OIP.f0pSosMmpb0KMeurj5teIAHaEK?w=287&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
             <img src="https://th.bing.com/th/id/OIP.lG1RjzIluQnCrsMRWlQaCwHaEf?w=274&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
             <img class="hide-on-mobile" src="https://th.bing.com/th/id/OIP.Y7bTrh0Be_0VIlqzGpzgAAHaEK?w=329&h=185&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
